# hubspot-compare

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  task.md
.do/: app.yaml
api/: comparison.py  hubspot_client.py  models.py
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: associations.html  comparison.html  custom_object_matching.html  index.html  privacy.html  property_to_property.html
utils/: helpers.py
